--- a/cn/style.css
+++ b/cn/style.css
@@ -26,7 +26,7 @@ body.dark-mode .splash-screen {
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
-  transform: scaleX(-1);
+  contain:fill;
 }
 
 /* 通用重置与基础 */
